--- a/.github/workflows/database_ws.yml
+++ b/.github/workflows/database_ws.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r .github/workflows/requirements.txt
 
     - name: Wait for PostgreSQL to be ready
       run: |
@@ -47,7 +47,7 @@ jobs:
         done
 
     - name: Replace variables in SQL files
-      run: python replace_vars.py
+      run: python .github/workflows/replace_vars.py
 
     - name: Create sample schema
       env:
