--- a/.github/workflows/database_ws.yml
+++ b/.github/workflows/database_ws.yml
@@ -46,15 +46,8 @@ jobs:
           sleep 1
         done
 
-    - name: Install PostGIS and pgRouting
-      run: |
-        # Install PostGIS and pgRouting extensions
-        apt-get update
-        apt-get install -y postgis postgresql-15-postgis-3 postgresql-15-pgrouting
-
-        # Enable PostGIS and pgRouting extensions in the database
-        psql -h localhost -U postgres -d giswater_test_db -c "CREATE EXTENSION postgis;"
-        psql -h localhost -U postgres -d giswater_test_db -c "CREATE EXTENSION pgrouting;"
+    - name: Setup PostgreSQL and PostGIS for Linux/macOS/Windows
+      uses: nyurik/action-setup-postgis@v2.1
 
     - name: Replace variables in SQL files
       run: python .github/workflows/replace_vars.py
