fix(workflow): pass PGPASSWORD to pgrouting install

--- a/.github/workflows/database_ws.yml
+++ b/.github/workflows/database_ws.yml
@@ -52,6 +52,8 @@ jobs:
         database: giswater_test_db
     
     - name: Install pgrouting
+      env:
+        PGPASSWORD: postgres
       run: |
         sudo apt-get install postgresql-14-pgrouting
         psql -h localhost -U postgres -d giswater_test_db -c 'CREATE EXTENSION pgrouting;'
