--- a/.github/workflows/database_ws.yml
+++ b/.github/workflows/database_ws.yml
@@ -78,7 +78,7 @@ jobs:
           local file=$1
           echo "Executing $file..."
           # Capture the output of the psql command (both stdout and stderr)
-          output=$(psql -h localhost -U postgres -d giswater_test_db -v ON_ERROR_STOP=1 -f "$file" 2>&1)
+          output=$(psql -h localhost -U postgres -d giswater_test_db -v ON_ERROR_STOP=1 -v VERBOSITY=verbose -f "$file" 2>&1)
           echo "Output: $output"
           # Check the exit status of the psql command
           if [ $? -ne 0 ]; then
@@ -88,10 +88,6 @@ jobs:
               echo "$output"
               exit 1
           fi
-          # if ! psql -h localhost -U postgres -d giswater_test_db -v ON_ERROR_STOP=1 -f "$file" 2>&1; then
-          #   echo "Error executing $file"
-          #   exit 1
-          # fi
         }
 
         # Process each root directory and its subdirectories
