--- a/.github/workflows/database_ws.yml
+++ b/.github/workflows/database_ws.yml
@@ -115,20 +115,32 @@ jobs:
           echo "Directory $updates_dir does not exist"
         fi
 
+        # child views
+        execute_sql "childviews/en_US/ws_schema_model.sql"
+
+        # execute lastprocess
+        psql -h localhost -U postgres -d giswater_test_db -c "SELECT ws_36.gw_fct_admin_schema_lastprocess($${"client":{"device":4, "lang":"en_US"}, "data":{"isNewProject":"TRUE", "gwVersion":"3.6.012", "projectType":"WS", "epsg":25831, "descript":"ws_36", "name":"ws_36", "author":"postgres", "date":"29-07-2024"}}$$);"
+
+        # Define the example directory
+        updates_dir="example/user/ws"
+
+        # Check if the updates directory exists
+        if [ -d "$updates_dir" ]; then
+          # Process "utils" and "ws" subdirectories within updates_dir
+          find "$updates_dir" -type d | sort | while read -r subdir; do
+            echo "Processing directory: $subdir"
+            find "$subdir" -type f -name "*.sql" | sort | while read -r file; do
+              execute_sql "$file"
+            done
+          done
+        else
+          echo "Directory $updates_dir does not exist"
+        fi
+
     - name: Verify Database
       env:
         PGPASSWORD: postgres
       run: |
-        # Check the presence of tables
-        tables=$(psql -h localhost -U postgres -d giswater_test_db -t -c '\dt')
-        if [ -z "$tables" ]; then
-          echo "No tables found in the database."
-          exit 1
-        else
-          echo "Tables found:"
-          echo "$tables"
-        fi
-
         # Check PostGIS version
         postgis_version=$(psql -h localhost -U postgres -d giswater_test_db -t -c "SELECT postgis_full_version();")
         if [ -z "$postgis_version" ]; then
@@ -147,4 +159,14 @@ jobs:
         else
           echo "pgRouting version:"
           echo "$pgrouting_version"
+        fi
+
+        # Check features
+        arcs=$(psql -h localhost -U postgres -d giswater_test_db -t -c "SELECT count(*) FROM ws_36.v_edit_arc;")
+        if [ -z "$arcs" ]; then
+          echo "No arcs found in the v_edit_arc table."
+          exit 1
+        else
+          echo "Arcs found:"
+          echo "$tables"
         fi
